Reemplazar emojis restantes con iconos SVG minimalistas: paleta (Neumorfismo), accesibilidad, gráfico de barras (Data-Driven), rayo (Performance), móvil (Mobile-First), target (Conversion-Centered + Amazon Playbook), fuego (urgencia cupos)

--- a/index.html
+++ b/index.html
@@ -3543,27 +3543,27 @@
 
             <div class="design-system-grid">
                 <div class="design-principle">
-                    <h3>🎨 Neumorfismo Funcional</h3>
+                    <h3><svg style="width: 20px; height: 20px; display: inline-block; margin-right: 8px; vertical-align: middle;" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"></circle><circle cx="8" cy="10" r="2" fill="#ef4444"></circle><circle cx="16" cy="10" r="2" fill="#3b82f6"></circle><circle cx="12" cy="16" r="2" fill="#10b981"></circle><path d="M4 18c2-3 8-3 10 0"></path></svg>Neumorfismo Funcional</h3>
                     <p>El neumorfismo no es solo visual. Usamos sombras inset/offset para crear jerarquía clara, indicar estados interactivos y guiar la atención del usuario sin abrumar.</p>
                 </div>
                 <div class="design-principle">
-                    <h3>♿ Accesibilidad Prioritaria</h3>
+                    <h3><svg style="width: 20px; height: 20px; display: inline-block; margin-right: 8px; vertical-align: middle;" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"></circle><path d="M12 6v6"></path><path d="M12 16h.01"></path></svg>Accesibilidad Prioritaria</h3>
                     <p>Contraste WCAG AAA, targets táctiles de 48px, etiquetas semánticas, y navegación clara. La inclusión es parte del diseño desde día uno.</p>
                 </div>
                 <div class="design-principle">
-                    <h3>📊 Data-Driven Design</h3>
+                    <h3><svg style="width: 20px; height: 20px; display: inline-block; margin-right: 8px; vertical-align: middle;" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="18" y1="20" x2="18" y2="10"></line><line x1="12" y1="20" x2="12" y2="4"></line><line x1="6" y1="20" x2="6" y2="14"></line></svg>Data-Driven Design</h3>
                     <p>Cada iteración de diseño se valida con testing. Usamos heatmaps, user testing y A/B para tomar decisiones, no suposiciones.</p>
                 </div>
                 <div class="design-principle">
-                    <h3>⚡ Performance First</h3>
+                    <h3><svg style="width: 20px; height: 20px; display: inline-block; margin-right: 8px; vertical-align: middle;" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon></svg>Performance First</h3>
                     <p>Animaciones suaves a 60fps, transiciones de 0.2-0.3s para feedback inmediato. La experiencia debe ser instantánea y deliciosa.</p>
                 </div>
                 <div class="design-principle">
-                    <h3>📱 Mobile-First Always</h3>
+                    <h3><svg style="width: 20px; height: 20px; display: inline-block; margin-right: 8px; vertical-align: middle;" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="5" y="2" width="14" height="20" rx="2" ry="2"></rect><line x1="12" y1="18" x2="12.01" y2="18"></line></svg>Mobile-First Always</h3>
                     <p>Comenzamos diseñando para dispositivos móviles, asegurándonos que la experiencia sea perfecta en pantallas pequeñas antes de escalar.</p>
                 </div>
                 <div class="design-principle">
-                    <h3>🎯 Conversion-Centered</h3>
+                    <h3><svg style="width: 20px; height: 20px; display: inline-block; margin-right: 8px; vertical-align: middle;" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"></circle><circle cx="12" cy="12" r="6"></circle><circle cx="12" cy="12" r="2"></circle></svg>Conversion-Centered</h3>
                     <p>Cada elemento tiene un propósito comercial. Colores, espaciado, CTAs y tipografía están optimizados para maximizar conversión y engagement.</p>
                 </div>
             </div>
@@ -3821,7 +3821,7 @@
             </div>
 
             <div style="background: rgba(242, 184, 181, 0.1); border: 2px solid var(--acento-principal); border-radius: 16px; padding: 40px; text-align: center;">
-                <h3 style="color: var(--acento-principal); font-size: 24px; margin-bottom: 15px;">🎯 Amazon Playbook Completo</h3>
+                <h3 style="color: var(--acento-principal); font-size: 24px; margin-bottom: 15px;"><svg style="width: 20px; height: 20px; display: inline-block; margin-right: 8px; vertical-align: middle;" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"></circle><circle cx="12" cy="12" r="6"></circle><circle cx="12" cy="12" r="2"></circle></svg>Amazon Playbook Completo</h3>
                 <p style="color: var(--texto-principal); margin-bottom: 25px; font-size: 16px;">Incluye guía de optimización SEO, fotografía profesional, copywriting persuasivo, estrategia de precios y análisis de competencia</p>
                 <a href="cotizacion.html" style="display: inline-block; background: var(--acento-principal); color: var(--texto-principal); padding: 15px 35px; border-radius: 8px; text-decoration: none; font-weight: bold; transition: all 0.3s;">Solicitar Consultoría Amazon</a>
             </div>
@@ -4298,7 +4298,7 @@
                 <!-- Urgencia visual (Ley de Parkinson) -->
                 <div style="margin-top: 20px; padding: 14px 28px; background: rgba(255, 153, 0, 0.12); border: 2px solid #FF9900; border-radius: 50px; display: inline-block; font-weight: 600; color: #D97706;">
                     <svg style="width: 18px; height: 18px; display: inline-block; margin-right: 8px; vertical-align: middle;" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"></circle><polyline points="12 6 12 12 16 14"></polyline></svg>
-                    🔥 Solo 3 cupos disponibles este mes
+                    <svg style="width: 18px; height: 18px; display: inline-block; margin-right: 6px; vertical-align: middle;" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M8.5 14.5A2.5 2.5 0 0 0 11 12c0-1.38-.5-2-1-3-1.072-2.143-.224-4.054 2-6 .5 2.5 2 4.9 4 6.5 2 1.6 3 3.5 3 5.5a7 7 0 1 1-14 0c0-1.153.433-2.294 1-3a2.5 2.5 0 0 0 2.5 2.5z"></path></svg>Solo 3 cupos disponibles este mes
                 </div>
             </div>
             
